--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/static": "6.5.0",
     "fastify": "4.5.3",
     "nodemon": "2.0.19"
   }
