--- a/package.json
+++ b/package.json
@@ -7,13 +7,32 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier:check": "prettier --check --ignore-path .gitignore . --loglevel warn",
+    "prettier:fix": "prettier --write --ignore-path .gitignore .",
+    "eslint:check": "eslint --ignore-path .gitignore . --max-warnings=0",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pre-commit-hook": "lint-staged",
+    "postinstall": "cp ./git-hooks/pre-commit ./.git/hooks"
+  },
+  "lint-staged": {
+    "**/*.*": [
+      "npm run prettier:check"
+    ],
+    "**/*.+(js|mjs|ts|jsx|tsx)": [
+      "npm run eslint:check"
+    ]
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@fastify/static": "6.5.0",
-    "fastify": "4.5.3",
-    "nodemon": "2.0.19"
+    "fastify": "4.5.3"
+  },
+  "devDependencies": {
+    "eslint": "8.22.0",
+    "eslint-plugin-react": "7.31.8",
+    "lint-staged": "13.0.3",
+    "nodemon": "2.0.19",
+    "prettier": "2.7.1"
   }
 }
