--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/static": "6.5.0",
-    "fastify": "4.5.3"
+    "fastify": "4.5.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "eslint": "8.22.0",
