--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fastify-react",
+  "name": "ssr-on-fastify-experiments",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -25,16 +25,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fastify/static": "6.5.0",
-    "fastify": "4.5.3",
+    "@fastify/static": "6.11.2",
+    "fastify": "4.23.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "eslint": "8.22.0",
-    "eslint-plugin-react": "7.31.8",
-    "lint-staged": "13.0.3",
-    "nodemon": "2.0.19",
-    "prettier": "2.7.1"
+    "eslint": "8.51.0",
+    "eslint-plugin-react": "7.33.2",
+    "lint-staged": "14.0.1",
+    "nodemon": "3.0.1",
+    "prettier": "3.0.3"
   }
 }
